        Reviewed by Darin.

<rdar://problem/5286444>
        http://bugs.webkit.org/show_bug.cgi?id=14269
        REGRESSION: Gmail links stop working after computer sleep

        Add a PowerNotifier object that takes care of resetting and firing the shared timer when coming
        back from sleep.

        * platform/mac/SharedTimerMac.cpp:
        (-[PowerNotifier init]):
        (-[PowerNotifier didWake:]):
        (WebCore::setSharedTimerFireTime):



Canonical link: https://commits.webkit.org/19432@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24851 268f45cc-cd09-0410-ab3c-d52691b4dbfc